--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# environment directory
+MLass/
+
+#vim temps
+*~
+
+#zips
+*.zip
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
